// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders properly 1`] = `
<Button
  active={false}
  disabled={false}
  onClick={[MockFunction onClick]}
  type="button"
  variant="primary"
>
  Button text
</Button>
`;

exports[`Button renders properly when loading 1`] = `
<Button
  active={false}
  disabled={true}
  onClick={[MockFunction onClick]}
  type="button"
  variant="primary"
>
  <LoadingIndicator
    loadingText="Loading"
    size="sm"
  />
</Button>
`;
